Remove zero-width spaces (U+200B) left by trac

--- a/Dell_Inc.-Latitude_5520-Erik_Edin.yml
+++ b/Dell_Inc.-Latitude_5520-Erik_Edin.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en'><span class='icon'></span>read more</a>
   credit: |
     Erik Edin
   link: |
