--- a/Dell_Inc.-XPS_13-j.yml
+++ b/Dell_Inc.-XPS_13-j.yml
@@ -60,7 +60,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class="ext-link" href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ"><span class="icon">​read more</span></a>
+    <a class="ext-link" href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ"><span class="icon">read more</span></a>
   credit: |
     j
   link: |
@@ -75,7 +75,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-devel/jamRkZJDC0g/KTniY0Y3dioJ'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-devel/jamRkZJDC0g/KTniY0Y3dioJ'><span class='icon'></span>read more</a>
   credit: |
     j
   link: |
