--- a/Lenovo-ThinkPad_W510-Sebastian_Hültenschmidt.yml
+++ b/Lenovo-ThinkPad_W510-Sebastian_Hültenschmidt.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ'><span class='icon'></span>read more</a>
   credit: |
     Sebastian Hültenschmidt
   link: |
