--- a/Toshiba-Tecra_S11-Jan_Beerden.yml
+++ b/Toshiba-Tecra_S11-Jan_Beerden.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726'><span class='icon'></span>read more</a>
   credit: |
     Jan Beerden
   link: |
