--- a/ASUS-X55A.yml
+++ b/ASUS-X55A.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion'><span class='icon'></span>read more</a>
   credit: |
     Zrubi
   link: |
