--- a/Dell_Inc.-Latitude_E4300-Pablo_Costa.yml
+++ b/Dell_Inc.-Latitude_E4300-Pablo_Costa.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion'><span class='icon'></span>read more</a>
   credit: |
     Pablo Costa
   link: |
@@ -60,7 +60,7 @@ versions:
   kernel: |
     3.9
   remark: |
-    Runs only with kernel 3.9 <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion'><span class='icon'>​</span>read more</a>
+    Runs only with kernel 3.9 <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion'><span class='icon'></span>read more</a>
   credit: |
     Pablo Costa
   link: |
