--- a/Dell_Inc.-Latitude_E6320-Alex.yml
+++ b/Dell_Inc.-Latitude_E6320-Alex.yml
@@ -45,9 +45,9 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/FyA7_Kzw1WA/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/FyA7_Kzw1WA/discussion'><span class='icon'></span>read more</a>
   credit: |
-    Alex​
+    Alex
   link: |
     https://groups.google.com/d/msg/qubes-users/F-jVh62ANak/s57rqUWTY7kJ
 
