--- a/Dell_Inc.-Latitude_E6520-Steven_Collins.yml
+++ b/Dell_Inc.-Latitude_E6520-Steven_Collins.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e'><span class='icon'></span>read more</a>
   credit: |
     Steven Collins
   link: |
