--- a/Dell_Inc.-XPS_13_(L322X)-Brian_J_Smith-Sweeney.yml
+++ b/Dell_Inc.-XPS_13_(L322X)-Brian_J_Smith-Sweeney.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/21kqNBzJLPw/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/21kqNBzJLPw/discussion'><span class='icon'></span>read more</a>
   credit: |
     Brian J Smith-Sweeney
   link: |
