--- a/HP-Compaq_dc7800_SFF-Rob_Townley.yml
+++ b/HP-Compaq_dc7800_SFF-Rob_Townley.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     3.9.2-2
   remark: |
-    IGP won't work with activated VT-d (3.12,3.11,3.7), <a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/QmshQ6aHsCM/LTyn6mL0kFkJ'><span class='icon'>​</span>3,9 works</a>, TPM not tested.
+    IGP won't work with activated VT-d (3.12,3.11,3.7), <a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/QmshQ6aHsCM/LTyn6mL0kFkJ'><span class='icon'></span>3,9 works</a>, TPM not tested.
   credit: |
     Rob Townley
   link: |
