--- a/HP-EliteBook_850_G1-Oliver_Médoc.yml
+++ b/HP-EliteBook_850_G1-Oliver_Médoc.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     3.17.1-1
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/Bfikyrwhoc8/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/Bfikyrwhoc8/discussion'><span class='icon'></span>read more</a>
   credit: |
     Olivier Médoc
   link: |
