--- a/HP-EliteBook_8540p-Oliver_Médoc.yml
+++ b/HP-EliteBook_8540p-Oliver_Médoc.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion'><span class='icon'></span>read more</a>
   credit: |
     Olivier Médoc
   link: |
