--- a/HP-Pavilion_Sleekbook_14-B030TU-Stephen_Boyd.yml
+++ b/HP-Pavilion_Sleekbook_14-B030TU-Stephen_Boyd.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class="ext-link" href="https://groups.google.com/d/topic/qubes-devel/ZC_SQJhXVOM/discussion"><span class="icon">​</span>read more</a>
+    <a class="ext-link" href="https://groups.google.com/d/topic/qubes-devel/ZC_SQJhXVOM/discussion"><span class="icon"></span>read more</a>
   credit: |
     Stephen Boyd
   link: |
