--- a/Lenovo-ThinkPad_T430-Alex_Dubois.yml
+++ b/Lenovo-ThinkPad_T430-Alex_Dubois.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion'><span class='icon'></span>read more</a>
   credit: |
     Alex Dubois
   link: |
