--- a/Lenovo-ThinkPad_T430s-cprise.yml
+++ b/Lenovo-ThinkPad_T430s-cprise.yml
@@ -47,7 +47,7 @@ versions:
   bios: |
     2.05
   remark: |
-    <a class="ext-link" href="https://groups.google.com/d/topic/qubes-devel/Z9seyOT46Ro/discussion"><span class="icon">​</span>read more</a>
+    <a class="ext-link" href="https://groups.google.com/d/topic/qubes-devel/Z9seyOT46Ro/discussion"><span class="icon"></span>read more</a>
   credit: |
     cprise
   link: |
