--- a/Lenovo-ThinkPad_T430u-tigerbeard.yml
+++ b/Lenovo-ThinkPad_T430u-tigerbeard.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/Z9M_k3i6dxU/discussion'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/topic/qubes-devel/Z9M_k3i6dxU/discussion'><span class='icon'></span>read more</a>
   credit: |
     tigerbeard
   link: |
