--- a/Lenovo-ThinkPad_W530_(24385JU)-Lab_Man.yml
+++ b/Lenovo-ThinkPad_W530_(24385JU)-Lab_Man.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     3.12.18-1
   remark: |
-    display issues<a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/ReLqPcsvDwk/WbJdDUBqgTsJ'><span class='icon'>​</span>read more</a>
+    display issues<a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/ReLqPcsvDwk/WbJdDUBqgTsJ'><span class='icon'></span>read more</a>
   credit: |
     Lab Man
   link: |
