--- a/Lenovo-ThinkPad_X230_(2306CTO)-Franz_Felix.yml
+++ b/Lenovo-ThinkPad_X230_(2306CTO)-Franz_Felix.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     3.12.14-4
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ'><span class='icon'></span>read more</a>
   credit: |
     Franz Felix
   link: |
