--- a/Purism-Librem_15-Todd_Weaver.yml
+++ b/Purism-Librem_15-Todd_Weaver.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/WX1IXBFkUwk/M-Xg1e3kieMJ'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-users/WX1IXBFkUwk/M-Xg1e3kieMJ'><span class='icon'></span>read more</a>
   credit: |
     Todd Weaver
   link: |
