--- a/Sony-VAIO_series_Z2_2011_edition_(VPCZ2190S)-Danny_Fullerton.yml
+++ b/Sony-VAIO_series_Z2_2011_edition_(VPCZ2190S)-Danny_Fullerton.yml
@@ -45,7 +45,7 @@ versions:
   kernel: |
     
   remark: |
-    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J'><span class='icon'>​</span>read more</a>
+    <a class='ext-link' href='https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J'><span class='icon'></span>read more</a>
   credit: |
     Danny Fullerton
   link: |
